fix: letter-spacing title

--- a/randomizers/random-building/css/main.css
+++ b/randomizers/random-building/css/main.css
@@ -216,6 +216,7 @@ body {
 	font-size: 13px;
 	color: #fff;
 	line-height: 1.2;
+	letter-spacing: 1px;
 }
 .meta .sub {
 	font-size: 11px;
